mi primer commit dentista bucerias

--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Home | Corlate</title>
+    <title>Dentista Bucerias</title>
 
     <!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -34,8 +34,8 @@
     <section class="window-height" id="error" style="background-image: url(images/404.png)">
        <div class="container">
             <h1>404</h1>
-            <p>Oops! Something is wrong</p>
-            <a class="btn btn-primary" href="index.html">Back to home</a>
+            <p>Oops! Ocurrio algo</p>
+            <a class="btn btn-primary" href="index.html">Regresar a inicio</a>
        </div>
     </section><!--/#error-->
 
