--- a/pricing.html
+++ b/pricing.html
@@ -33,19 +33,19 @@
 <body>
 
     <header id="header">
-        <div class="top-bar" style="background-color:  #5e758a;">
+        <div class="top-bar" style="background-color:  #fff">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
                         <div class="top-number">
-                            <p><a href="tel:013292982527"></a> <i class="fa fa-phone-square"></i>  01 (52) 329 298 2527</p>
+                            <p style="color: #333"><a href="tel:013292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i>  01 (52) 329 298 2527</p>
                         </div>
                     </div>
                     <div class="col-sm-6 col-xs-12">
                         <div class="social">
                             <ul class="social-share">
                                 <li><a href="https://www.facebook.com/DraAlbaNydia/" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="https://www.instagram.com/dentistabucerias/"><i class="fa fa-instagram" title="Instagram" target="_blank"></i></a></li>                                
+                                <li><a href="https://www.instagram.com/dentistabucerias/" title="Instagram" target="_blank"><i class="fa fa-instagram" ></i></a></li>                        
                             </ul>
                         </div>
                     </div>
@@ -54,7 +54,7 @@
             <!--/.container-->
         </div>
         <!--/.top-bar-->
-        <nav class="navbar navbar-inverse" role="banner" style="background-color:  #34495e;">
+        <nav class="navbar navbar-inverse" role="banner" style="background-color: #fff;">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -63,7 +63,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+                    <a class="navbar-brand" href="index.html"><img src="images/AlbaLogo_2.png" alt="logo" width="130"></a>
                 </div>
                 
                 <div class="collapse navbar-collapse navbar-right">
@@ -150,7 +150,7 @@
                 <div class="row">
                     <div class="col-md-2">
                         <a href="#" class="footer-logo">
-                            <img src="images/logotest2.png" alt="logo">
+                            <img src="images/AlbaLogo_2.png" alt="logo" width="300">
                         </a>
                     </div>
                     <div class="col-md-10">
@@ -203,8 +203,8 @@
                                 <div class="widget">
                                     <h3>Redes sociales</h3>
                                     <ul>
-                                        <li><a href="#">Facebook</a></li>
-                                        <li><a href="#">Instagram</a></li>
+                                        <li><a href="https://www.facebook.com/DraAlbaNydia/" title="Facebook" target="_blank"><i class="fa fa-facebook"></i>  Facebook</a></li>
+                                        <li><a href="https://www.instagram.com/dentistabucerias/" title="Instagram" target="_blank"><i class="fa fa-instagram" ></i>  Instagram</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -226,10 +226,10 @@
                     </div>
                     <div class="col-sm-6">
                         <ul class="pull-right">
-                            <li><a href="#">Inicio</a></li>
-                            <li><a href="#">Nosotros</a></li>
-                            <li><a href="#">Servicios</a></li>
-                            <li><a href="#">Contáctanos</a></li>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="about-us.html">Nosotros</a></li>
+                            <li><a href="services.html">Servicios</a></li>
+                            <li><a href="contact-us.html">Contáctanos</a></li>
                         </ul>
                     </div>
                 </div>
