mi segundo commit dentista bucerias

--- a/about-us.html
+++ b/about-us.html
@@ -33,7 +33,7 @@
 <body>
 
     <header id="header">
-        <div class="top-bar" style="background-color:  #fff">
+        <div class="top-bar" style="background-color: #fff">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
@@ -98,8 +98,8 @@
                 </div>
                 <div class="col-md-5">
                     <div class="about-content">
-                        <h2>Quienes somos</h2>
-                        <p>Somos tu opción en Soluciones Dentales, atendemos de manera Profesional, <br>principalmente en los campos de Estética y Reconstruccion Dental.<br> Contamos con un gran equipo de especialistas. <br>Nuestro consultorio es de fácil acceso ya que estamos ubicados en el centro de Bucerias.</p>
+                        <h2> C.D. ALBA NYDIA AGUILAR IBARRA CED. PROF. 5090624 </h2>
+                        <p> Dra. Alba Nydia Aguilar Te ofrece servicios dentales de Primer Nivel, está comprometida con la innovación en materiales de la mejor calidad.  <br>Cree en la Educación Continua que debe tener todo Profesional, por esa razón está en constante adiestramiento Dental.</p>
                     </div>
                 </div>
             </div>
@@ -265,31 +265,25 @@
                     <div class="col-md-10">
                         <div class="row">
                             <div class="col-md-3 col-sm-6">
-                                <div class="widget">                                    
-                                        <h3>DENTISTA BUCERIAS</h3>
-                                        <ul>
-                                            <li><a href="#">Avenida Pacifico 57 local 5 </a></li>
-                                            <li><a href="#">Centro de Bucerias entre calle Cuauhtémoc e Hidalgo</a></li>
-                                            <li><a href="#">Bucerias, Nayarit, México </a></li>
-                                            <li><a href="#">Teléfono 01  329 29 82527</a></li>
-                                            <li><a href="#">dentistabucerias@gmail.com</a></li>
-                                        </ul>
-                                    </div>
+                                    <div class="widget">                                    
+                                            <h3>DENTISTA BUCERIAS</h3>
+                                            <p>Avenida Pacifico 57 local 5 Centro de Bucerias entre calle Cuauhtémoc e Hidalgo <br> Bucerias Nayarit, México. <br> Teléfono 01  329 29 82527 <br> dentistabucerias@gmail.com</p>                                    
+                                        </div>
                                 </div>
                                 <!--/.col-md-3-->
         
                                 <div class="col-md-3 col-sm-6">
-                                    <div class="widget">
-                                        <h3>Horarios de atención</h3>
-                                        <p>Por las mañanas <br>
-                                                Lunes a viernes 9:00am a 4.00pm <br>
-                                                Sábados por la mañana previa cita
-                                                </p>
-                                        <p>Por las tardes <br>
-                                                Martes y jueves de 5:00pm a 7:30pm
-                                                </p>
+                                        <div class="widget">
+                                            <h3>Horarios de atención</h3>
+                                            <p><strong>Por las mañanas </strong> <br>
+                                                    Lunes a viernes 9:00am a 4.00pm<br>
+                                                    Sábados por la mañana previa cita
+                                                    </p>
+                                            <p><strong>Por las tardes </strong><br>
+                                                    Martes y jueves de 5:00pm a 7:30pm
+                                                    </p>
+                                        </div>
                                     </div>
-                                </div>
                                 <!--/.col-md-3-->
         
                                 <div class="col-md-3 col-sm-6">
@@ -299,7 +293,7 @@
                                             <li><a href="#">Preguntas frecuentes</a></li>
                                             <li><a href="#">Aviso de privacidad</a></li>
                                             <li><a href="#">Términos y condiciones</a></li>
-                                            <li><a href="#">Contáctanos</a></li>
+                                            <li><a href="contact-us.html">Contáctanos</a></li>
                                         </ul>
                                     </div>
                                 </div>
