--- a/portfolio.html
+++ b/portfolio.html
@@ -85,15 +85,15 @@
     </header>
     <!--/header-->
 
-    <div class="page-title" style="background-image: url(images/childrensmile9.jpg)">
+    <div class="page-title" style="background-image: url(images/childrensmile5.jpg)">
         <h1>Galería</h1>
     </div>
     
     <section id="portfolio">
         <div class="container">
             <div class="center">
-                <h2>Trabajo reciente</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
+                <h2>Te compartimos nuestra Galería</h2>
+                <p class="lead">Estamos trabajando día a día para mantener actualizada esta sección</p>
             </div>
 
 
@@ -109,10 +109,10 @@
                 <div class="portfolio-items">
                     <div class="portfolio-item limpieza col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
-                            <img class="img-responsive" src="images/portfolio/item-15.png" alt="">
+                            <img class="img-responsive" src="images/portfolio/consultorio-03.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <a class="preview" href="images/portfolio/item-15.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                    <a class="preview" href="images/portfolio/consultorio-03.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -121,10 +121,10 @@
 
                     <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
-                            <img class="img-responsive" src="images/portfolio/item-8.jpg" alt="">
+                            <img class="img-responsive" src="images/portfolio/galeria1.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <a class="preview" href="images/portfolio/item-8.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                    <a class="preview" href="images/portfolio/galeria1.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -133,10 +133,10 @@
 
                     <div class="portfolio-item limpieza endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
-                            <img class="img-responsive" src="images/portfolio/item-9.jpg" alt="">
+                            <img class="img-responsive" src="images/portfolio/galeria2.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <a class="preview" href="images/portfolio/item-9.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                    <a class="preview" href="images/portfolio/galeria2.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -145,10 +145,10 @@
 
                     <div class="portfolio-item extracciones endodoncia apps col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
-                            <img class="img-responsive" src="images/portfolio/item-10.jpg" alt="">
+                            <img class="img-responsive" src="images/portfolio/galeria3.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <a class="preview" href="images/portfolio/item-10.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                    <a class="preview" href="images/portfolio/galeria3.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -157,10 +157,10 @@
 
                     <div class="portfolio-item limpieza endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
-                            <img class="img-responsive" src="images/portfolio/item-5.png" alt="">
+                            <img class="img-responsive" src="images/portfolio/galeria4.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <a class="preview" href="images/portfolio/item-5.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                    <a class="preview" href="images/portfolio/galeria4.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -169,10 +169,10 @@
 
                     <div class="portfolio-item extracciones col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
-                            <img class="img-responsive" src="images/portfolio/item-1.png" alt="">
+                            <img class="img-responsive" src="images/portfolio/galeria5.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <a class="preview" href="images/portfolio/item-1.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                    <a class="preview" href="images/portfolio/galeria5.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -181,10 +181,10 @@
 
                     <div class="portfolio-item limpieza col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
-                            <img class="img-responsive" src="images/portfolio/item-6.png" alt="">
+                            <img class="img-responsive" src="images/portfolio/galeria6.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <a class="preview" href="images/portfolio/item-6.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                    <a class="preview" href="images/portfolio/galeria6.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -193,10 +193,10 @@
 
                     <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
-                            <img class="img-responsive" src="images/portfolio/item-2.png" alt="">
+                            <img class="img-responsive" src="images/portfolio/galeria7.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <a class="preview" href="images/portfolio/item-2.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                    <a class="preview" href="images/portfolio/galeria7.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -221,13 +221,7 @@
                             <div class="col-md-3 col-sm-6">
                                 <div class="widget">                                    
                                     <h3>DENTISTA BUCERIAS</h3>
-                                    <ul>
-                                        <li><a href="#">Avenida Pacifico 57 local 5 </a></li>
-                                        <li><a href="#">Centro de Bucerias entre calle Cuauhtémoc e Hidalgo</a></li>
-                                        <li><a href="#">Bucerias, Nayarit, México </a></li>
-                                        <li><a href="#">Teléfono 01  329 29 82527</a></li>
-                                        <li><a href="#">dentistabucerias@gmail.com</a></li>
-                                    </ul>
+                                    <p>Avenida Pacifico 57 local 5 Centro de Bucerias entre calle Cuauhtémoc e Hidalgo <br> Bucerias Nayarit, México. <br> Teléfono 01  329 29 82527 <br> dentistabucerias@gmail.com</p>                                    
                                 </div>
                             </div>
                             <!--/.col-md-3-->
@@ -235,11 +229,11 @@
                             <div class="col-md-3 col-sm-6">
                                 <div class="widget">
                                     <h3>Horarios de atención</h3>
-                                    <p>Por las mañanas <br>
-                                            Lunes a viernes 9:00am a 4.00pm <br>
+                                    <p><strong>Por las mañanas </strong> <br>
+                                            Lunes a viernes 9:00am a 4.00pm<br>
                                             Sábados por la mañana previa cita
                                             </p>
-                                    <p>Por las tardes <br>
+                                    <p><strong>Por las tardes </strong><br>
                                             Martes y jueves de 5:00pm a 7:30pm
                                             </p>
                                 </div>
@@ -253,7 +247,7 @@
                                         <li><a href="#">Preguntas frecuentes</a></li>
                                         <li><a href="#">Aviso de privacidad</a></li>
                                         <li><a href="#">Términos y condiciones</a></li>
-                                        <li><a href="#">Contáctanos</a></li>
+                                        <li><a href="contact-us.html">Contáctanos</a></li>
                                     </ul>
                                 </div>
                             </div>
