--- a/services.html
+++ b/services.html
@@ -292,31 +292,25 @@
                 <div class="col-md-10">
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
-                            <div class="widget">                                    
-                                <h3>DENTISTA BUCERIAS</h3>
-                                <ul>
-                                    <li><a href="#">Avenida Pacifico 57 local 5 </a></li>
-                                    <li><a href="#">Centro de Bucerias entre calle Cuauhtémoc e Hidalgo</a></li>
-                                    <li><a href="#">Bucerias, Nayarit, México </a></li>
-                                    <li><a href="#">Teléfono 01  329 29 82527</a></li>
-                                    <li><a href="#">dentistabucerias@gmail.com</a></li>
-                                </ul>
-                            </div>
+                                <div class="widget">                                    
+                                        <h3>DENTISTA BUCERIAS</h3>
+                                        <p>Avenida Pacifico 57 local 5 Centro de Bucerias entre calle Cuauhtémoc e Hidalgo <br> Bucerias Nayarit, México. <br> Teléfono 01  329 29 82527 <br> dentistabucerias@gmail.com</p>                                    
+                                    </div>
                         </div>
                         <!--/.col-md-3-->
 
                         <div class="col-md-3 col-sm-6">
-                            <div class="widget">
-                                <h3>Horarios de atención</h3>
-                                <p>Por las mañanas <br>
-                                        Lunes a viernes 9:00am a 4.00pm <br>
-                                        Sábados por la mañana previa cita
-                                        </p>
-                                <p>Por las tardes <br>
-                                        Martes y jueves de 5:00pm a 7:30pm
-                                        </p>
+                                <div class="widget">
+                                    <h3>Horarios de atención</h3>
+                                    <p><strong>Por las mañanas </strong> <br>
+                                            Lunes a viernes 9:00am a 4.00pm<br>
+                                            Sábados por la mañana previa cita
+                                            </p>
+                                    <p><strong>Por las tardes </strong><br>
+                                            Martes y jueves de 5:00pm a 7:30pm
+                                            </p>
+                                </div>
                             </div>
-                        </div>
                         <!--/.col-md-3-->
 
                         <div class="col-md-3 col-sm-6">
@@ -326,7 +320,7 @@
                                     <li><a href="#">Preguntas frecuentes</a></li>
                                     <li><a href="#">Aviso de privacidad</a></li>
                                     <li><a href="#">Términos y condiciones</a></li>
-                                    <li><a href="#">Contáctanos</a></li>
+                                    <li><a href="contact-us.html">Contáctanos</a></li>
                                 </ul>
                             </div>
                         </div>
