cuarto commit enero 30

--- a/about-us.html
+++ b/about-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-MX">
 
 <head>
     <meta charset="utf-8">
@@ -72,8 +72,9 @@
                         <li><a href="index.html">Inicio</a></li>
                         <li class="active"><a href="about-us.html">Nosotros</a></li>
                         <li><a href="services.html">Servicios</a></li>
-                        <li><a href="portfolio.html">Galería</a></li>
-                        <li><a href="index.html">Promociones</a></li>
+                        <li><a href="precios.html">Precios</a></li>
+                        <li><a href="promos.html">Promociones</a></li>
+                        <li><a href="portfolio.html">Galería</a></li>                        
                         <li><a href="contact-us.html">Solicita una cita</a></li>                      
                     </ul>
                 </div>
@@ -84,7 +85,7 @@
     </header>
     <!--/header-->
     
-    <div class="page-title" style="background-image: url(images/nosotros3.jpg)">
+    <div class="page-title" style="background-image: url(images/nosotros33.jpg)">
         <h1>Nosotros</h1>
     </div>
 
@@ -98,7 +99,7 @@
                 </div>
                 <div class="col-md-5">
                     <div class="about-content">
-                        <h2> C.D. ALBA NYDIA AGUILAR IBARRA CED. PROF. 5090624 </h2>
+                        <h2> C.D. ALBA NYDIA AGUILAR IBARRA <br> CEDULA PROFESIONAL 5090624 </h2>
                         <p> Dra. Alba Nydia Aguilar Te ofrece servicios dentales de Primer Nivel, está comprometida con la innovación en materiales de la mejor calidad.  <br>Cree en la Educación Continua que debe tener todo Profesional, por esa razón está en constante adiestramiento Dental.</p>
                     </div>
                 </div>
@@ -170,19 +171,13 @@
         <div class="container">
             <div class="center fadeInDown">
                 <h2>Doctora Alba Aguilar Ibarra</h2>
-                <p class="lead">La doctaroa Alba Aguilar especialista en cirugias y diseño de sonrisas <br> es una persona en preparación constante oara dar la mejor antención a sus pacientes</p>
+                <p class="lead">La doctora Alba Aguilar especialista en cirugias y diseño de sonrisas es una <br>persona en preparación constante para dar la mejor atención a sus pacientes.</p>
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6 single-team">
-                    <!--<div class="inner">-->
-                        <div class="recent-work-wrap">
-                            <!--<img src="images/doctoraAlba2.jpg" alt="">-->
-                            <img class="img-responsive" src="images/doctoraAlba2.jpg" alt="">
-                            <div class="overlay">
-                                <div class="recent-work-inner">
-                                    <a class="preview" href="images/doctoraAlba2.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
-                                </div>
-                            </div>
+                    <div class="inner">
+                        <div class="team-img">
+                            <img src="images/doctoraAlba2.jpg" alt="">
                         </div>
                         <div class="team-content">
                             <h4>Doctora Alba Aguilar Ibarra</h4>
@@ -191,13 +186,10 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 single-team">
-                    <div class="recent-work-wrap">
-                            <img class="img-responsive" src="images/certificado1.JPG" alt="">
-                            <div class="overlay">
-                                <div class="recent-work-inner">
-                                    <a class="preview" href="images/certificado1.JPG" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
-                                </div>
-                            </div>
+                    <div class="inner">                            
+                        <div class="team-img">
+                            <img src="images/certificado1.jpg" alt="">   
+                        </div>
                         <div class="team-content">
                             <h4>Certificado</h4>
                             <span class="desg">Cirujano dentista</span>
@@ -290,9 +282,9 @@
                                     <div class="widget">
                                         <h3>Varios</h3>
                                         <ul>
-                                            <li><a href="#">Preguntas frecuentes</a></li>
-                                            <li><a href="#">Aviso de privacidad</a></li>
-                                            <li><a href="#">Términos y condiciones</a></li>
+                                            <li><a href="faqs.html">Preguntas frecuentes</a></li>
+                                            <li><a href="avisoprivacidad.html">Aviso de privacidad</a></li>
+                                            <li><a href="terminos.html">Términos y condiciones</a></li>
                                             <li><a href="contact-us.html">Contáctanos</a></li>
                                         </ul>
                                     </div>
@@ -322,7 +314,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        &copy; 2019 <a target="_blank" href="#" title="Matt´s Software">Dentista Bucerias</a>. Todos los derechos reservados.
+                        &copy; 2019 <a target="_self" href="index.html" title="Lion Software">Dentista Bucerias</a>. Todos los derechos reservados.
                     </div>
                     <div class="col-sm-6">
                         <ul class="pull-right">
