--- a/portfolio.html
+++ b/portfolio.html
@@ -72,8 +72,9 @@
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="about-us.html">Nosotros</a></li>
                         <li><a href="services.html">Servicios</a></li>
+                        <li><a href="precios.html">Precios</a></li>
+                        <li><a href="promos.html">Promociones</a></li>
                         <li class="active"><a href="portfolio.html">Galería</a></li>
-                        <li><a href="index.html">Promociones</a></li>
                         <li><a href="contact-us.html">Solicita una cita</a></li>
                     </ul>
                 </div>
@@ -85,7 +86,7 @@
     </header>
     <!--/header-->
 
-    <div class="page-title" style="background-image: url(images/childrensmile5.jpg)">
+    <div class="page-title" style="background-image: url(images/blog11.png)">
         <h1>Galería</h1>
     </div>
     
@@ -202,6 +203,66 @@
                         </div>
                     </div>
                     <!--/.portfolio-item-->
+
+                    <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
+                        <div class="recent-work-wrap">
+                            <img class="img-responsive" src="images/portfolio/galeria01.jpg" alt="">
+                            <div class="overlay">
+                                <div class="recent-work-inner">
+                                    <a class="preview" href="images/portfolio/galeria01.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.portfolio-item-->
+
+                    <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
+                        <div class="recent-work-wrap">
+                            <img class="img-responsive" src="images/portfolio/galeria02.jpg" alt="">
+                            <div class="overlay">
+                                <div class="recent-work-inner">
+                                    <a class="preview" href="images/portfolio/galeria02.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.portfolio-item-->
+
+                    <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
+                        <div class="recent-work-wrap">
+                            <img class="img-responsive" src="images/portfolio/galeria03.jpg" alt="">
+                            <div class="overlay">
+                                <div class="recent-work-inner">
+                                    <a class="preview" href="images/portfolio/galeria03.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.portfolio-item-->
+
+                    <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
+                        <div class="recent-work-wrap">
+                            <img class="img-responsive" src="images/portfolio/galeria04.jpg" alt="">
+                            <div class="overlay">
+                                <div class="recent-work-inner">
+                                    <a class="preview" href="images/portfolio/galeria04.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.portfolio-item-->
+
+                    <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
+                        <div class="recent-work-wrap">
+                            <img class="img-responsive" src="images/portfolio/galeria05.jpg" alt="">
+                            <div class="overlay">
+                                <div class="recent-work-inner">
+                                    <a class="preview" href="images/portfolio/galeria05.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.portfolio-item-->                   
                 </div>
             </div>
         </div>
@@ -244,9 +305,9 @@
                                 <div class="widget">
                                     <h3>Varios</h3>
                                     <ul>
-                                        <li><a href="#">Preguntas frecuentes</a></li>
-                                        <li><a href="#">Aviso de privacidad</a></li>
-                                        <li><a href="#">Términos y condiciones</a></li>
+                                        <li><a href="faqs.html">Preguntas frecuentes</a></li>
+                                        <li><a href="avisoprivacidad.html">Aviso de privacidad</a></li>
+                                        <li><a href="terminos.html">Términos y condiciones</a></li>
                                         <li><a href="contact-us.html">Contáctanos</a></li>
                                     </ul>
                                 </div>
@@ -276,7 +337,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        &copy; 2019 <a target="_blank" href="#" title="Matt´s Software">Dentista Bucerias</a>. Todos los derechos reservados.
+                        &copy; 2019 <a target="_self" href="index.html" title="Lion Software">Dentista Bucerias</a>. Todos los derechos reservados.
                     </div>
                     <div class="col-sm-6">
                         <ul class="pull-right">
