--- a/services.html
+++ b/services.html
@@ -73,8 +73,9 @@
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="about-us.html">Nosotros</a></li>
                         <li class="active"><a href="services.html">Servicios</a></li>
+                        <li><a href="precios.html">Precios</a></li> 
+                        <li><a href="promos.html">Promociones</a></li>
                         <li><a href="portfolio.html">Galería</a></li>
-                        <li><a href="promociones.html">Promociones</a></li>
                         <li><a href="contact-us.html">Solicita una cita</a></li>
                     </ul>
                 </div>
@@ -140,7 +141,7 @@
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Resinas</h3>
-                            <p>Es un procedimiento en donde desarrollamos un prototipo para cambiar forma, tamaño y color de tus dientes; siempre buscando la armonía y estética de tu Sonrisa.</p>
+                            <p>Es una restauración estética que permite obturar dientes y molares dañados por caries, grietas y/o fracturas. Se coloca del color del diente. Se utiliza en pequeños y medianos rellenos. A obturaciones de mayor tamaño procedemos a colocar INCRUSTACIONES de las cuales pueden ser totalmente estéticas hechas por porcelana Emax.</p>
                         </div>
                     </div>
                 </div>
@@ -248,39 +249,7 @@
         </div>
     </section>
 
-
-    <!--<section id="partner">
-        <div class="container">
-            <div class="center fadeInDown">
-                <h2>Nuestros socios y aliados</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
-            </div>
-
-            <div class="partners">
-                <ul>
-                    <li>
-                        <a href="#"><img class="img-responsive fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms" src="images/partners/brand-1.png"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img class="img-responsive fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" src="images/partners/brand-2.png"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img class="img-responsive fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms" src="images/partners/brand-3.png"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img class="img-responsive fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms" src="images/partners/brand-4.png"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img class="img-responsive fadeInDown" data-wow-duration="1000ms" data-wow-delay="1500ms" src="images/partners/brand-5.png"></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        
-    </section> -->
-    <!--/#partner-->
- 
-   
+    
     <section id="bottom">
         <div class="container fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
             <div class="row">
@@ -317,9 +286,9 @@
                             <div class="widget">
                                 <h3>Varios</h3>
                                 <ul>
-                                    <li><a href="#">Preguntas frecuentes</a></li>
-                                    <li><a href="#">Aviso de privacidad</a></li>
-                                    <li><a href="#">Términos y condiciones</a></li>
+                                    <li><a href="faqs.html">Preguntas frecuentes</a></li>
+                                    <li><a href="avisoprivacidad.html">Aviso de privacidad</a></li>
+                                    <li><a href="terminos.html">Términos y condiciones</a></li>
                                     <li><a href="contact-us.html">Contáctanos</a></li>
                                 </ul>
                             </div>
@@ -349,7 +318,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2019 <a target="_blank" href="#" title="Matt´s Software">Dentista Bucerias</a>. Todos los derechos reservados.
+                    &copy; 2019 <a target="_self" href="index.html" title="Lion Software">Dentista Bucerias</a>. Todos los derechos reservados.
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
