--- a/contact-us.html
+++ b/contact-us.html
@@ -71,8 +71,9 @@
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="about-us.html">Nosotros</a></li>
                         <li><a href="services.html">Servicios</a></li>
-                        <li><a href="portfolio.html">Galería</a></li>
-                        <li><a href="promociones.html">Promociones</a></li>
+                        <li><a href="precios.html">Precios</a></li>
+                        <li><a href="promos.html">Promociones</a></li>
+                        <li><a href="portfolio.html">Galería</a></li>                        
                         <li class="active"><a href="contact-us.html">Solicita una cita</a></li>                      
                     </ul>
                 </div>
@@ -167,9 +168,9 @@
                                 <div class="widget">
                                     <h3>Varios</h3>
                                     <ul>
-                                        <li><a href="#">Preguntas frecuentes</a></li>
-                                        <li><a href="#">Aviso de privacidad</a></li>
-                                        <li><a href="#">Términos y condiciones</a></li>
+                                        <li><a href="faqs.html">Preguntas frecuentes</a></li>
+                                        <li><a href="avisoprivacidad.html">Aviso de privacidad</a></li>
+                                        <li><a href="terminos.html">Términos y condiciones</a></li>
                                         <li><a href="contact-us.html">Contáctanos</a></li>
                                     </ul>
                                 </div>
@@ -199,7 +200,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        &copy; 2019 <a target="_blank" href="#" title="Matt´s Software">Dentista Bucerias</a>. Todos los derechos reservados.
+                        &copy; 2019 <a target="_self" href="index.html" title="Lion Software">Dentista Bucerias</a>. Todos los derechos reservados.
                     </div>
                     <div class="col-sm-6">
                         <ul class="pull-right">
