--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
                         <li class="active"><a href="index.html">Inicio</a></li>
                         <li><a href="about-us.html">Nosotros</a></li>
                         <li><a href="services.html">Servicios</a></li>
+                        <li><a href="precios.html">Precios</a></li>
+                        <li><a href="promos.html">Promociones</a></li>
                         <li><a href="portfolio.html">Galería</a></li>
-                        <li><a href="index.html">Promociones</a></li>
                         <li><a href="contact-us.html">Solicita una cita</a></li>
                     </ul>
                 </div>
@@ -101,7 +102,7 @@
                                 <div class="carousel-content">
                                     <h1 class="animation animated-item-1" style="color: #333;">Tu sonrisa es importante para nosotros</h1>
                                     <div class="animation animated-item-2" style="color: #333;">
-                                        Dental Solutions es una clínica dental accesible en Puerto Vallarta que brinda atención profesional en los campos de estética, conservación y reconstrucción dental.
+                                        Dentista Bucerias es una clínica dental accesible en Puerto Vallarta que brinda atención profesional en los campos de estética, conservación y reconstrucción dental.
                                     </div>
                                     <a class="btn-slide animation animated-item-3" href="services.html">Servicios</a>
                                     <a class="btn-slide white animation animated-item-3" href="contact-us.html" style="color: #333;">Solicita una cita</a>
@@ -226,7 +227,7 @@
         <div class="container">
             <div class="center fadeInDown">
                 <h2>Trabajo reciente</h2>
-                <p class="lead">Les compartimos parte de los  <br> de los trabajos que realizamos en tu clinica Dentista Bucerias</p>
+                <p class="lead">Les compartimos parte de los<br> de los trabajos que realizamos en tu clinica Dentista Bucerias</p>
             </div>
 
             <div class="row">
@@ -359,7 +360,7 @@
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">Resinas</h3>
-                            <p>Es un procedimiento en donde desarrollamos un prototipo para cambiar forma, tamaño y color de tus dientes; siempre buscando la armonía y estética de tu Sonrisa.</p>
+                            <p>Es una restauración estética que permite obturar dientes y molares dañados por caries, grietas y/o fracturas. Se coloca del color del diente. Se utiliza en pequeños y medianos rellenos. A obturaciones de mayor tamaño procedemos a colocar INCRUSTACIONES de las cuales pueden ser totalmente estéticas hechas por porcelana Emax.</p>
                         </div>
                     </div>
                 </div>
@@ -519,9 +520,9 @@
                                 <div class="widget">
                                     <h3>Varios</h3>
                                     <ul>
-                                        <li><a href="#">Preguntas frecuentes</a></li>
-                                        <li><a href="#">Aviso de privacidad</a></li>
-                                        <li><a href="#">Términos y condiciones</a></li>
+                                        <li><a href="faqs.html">Preguntas frecuentes</a></li>
+                                        <li><a href="avisoprivacidad.html">Aviso de privacidad</a></li>
+                                        <li><a href="terminos.html">Términos y condiciones</a></li>
                                         <li><a href="contact-us.html">Contáctanos</a></li>
                                     </ul>
                                 </div>
@@ -551,7 +552,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        &copy; 2019 <a target="_blank" href="#" title="Matt´s Software">Dentista Bucerias</a>. Todos los derechos reservados.
+                        &copy; 2019 <a target="_self" href="index.html" title="Lion Software">Dentista Bucerias</a>. Todos los derechos reservados.
                     </div>
                     <div class="col-sm-6">
                         <ul class="pull-right">
