--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-MX">
 
 <head>
     <meta charset="utf-8">
@@ -70,9 +70,10 @@
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="about-us.html">Nosotros</a></li>
-                        <li class="active"><a href="services.html">Servicios</a></li>
+                        <li><a href="services.html">Servicios</a></li>
+                        <li class="active"><a href="pricing.html">Precios</a></li>
+                        <li><a href="promos.html">Promociones</a></li>
                         <li><a href="portfolio.html">Galería</a></li>
-                        <li><a href="promociones.html">Promociones</a></li>
                         <li><a href="contact-us.html">Solicita una cita</a></li>
                     </ul>
                 </div>
@@ -83,47 +84,46 @@
 
 
     <div class="page-title" style="background-image: url(images/page-title.png)">
-        <h1>Pricing</h1>
+        <h1>Precios</h1>
     </div>
     
     <section class="pricing">
         <div class="large-title text-center">        
-            <h2>Pricing Table</h2>
-            <p>All users on MySpace will know that there are millions of people out there. Every day <br> besides so many people joining this community.</p>
+            <h2>Tabla de costos</h2>
+            <p>Les compartimos los precios de algunos de nuestros servicios</p>
         </div> 
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 text-center">
                     <div class="single-pricing">
-                        <span>Start Up</span>
+                        <span>Limpieza dental</span>
                         <h1>
                             <span>$</span>
-                            19
-                            <span>/mo</span>
+                            500
+                            <span>.00</span>
                         </h1>
                         <div class="clearfix">
                             <ul>
-                                <li><i class="fa fa-pie-chart"></i> 5 Gb Disk Space</li>
-                                <li><i class="fa fa-paper-plane"></i> 1GB Dadicated Ram</li>
+                                <li>Limpieza dental</li>
+                                <li> Realizaremos una limpieza de toda tu dentadura</li>
                             </ul>
                         </div>
-                        <a href="#">BUY</a>
+                        <a href="blog-item.html">Solicitar un cita</a>
                     </div>
-                    <div class="single-pricing featured">
-                        <span>Standard</span>
+                    <div class="single-pricing">
+                        <span>Consulta y Limpieza</span>
                         <h1>
                             <span>$</span>
-                            49
-                            <span>/mo</span>
+                            950
+                            <span>.00</span>
                         </h1>
                         <div class="clearfix">
                             <ul>
-                                <li><i class="fa fa-pie-chart"></i> 5 Gb Disk Space</li>
-                                <li><i class="fa fa-paper-plane"></i> 1GB Dadicated Ram</li>
-                                <li><i class="fa fa-cloud"></i> 1GB Dadicated Ram</li>
+                                <li>La consulta dental incluye toma completa de radiografías digitales <br> y fotografías intraorales</li>
+                                <li>La limpieza es con ultrasonido además de pulido</li>
                             </ul>
                         </div>
-                        <a href="#">BUY</a>
+                        <a href="blog.html">BUY</a>
                     </div>
                     <div class="single-pricing">
                         <span>Premium</span>
@@ -140,6 +140,36 @@
                         </div>
                         <a href="#">BUY</a>
                     </div>
+                    <div class="single-pricing">
+                            <span>Premium</span>
+                            <h1>
+                                <span>$</span>
+                                99
+                                <span>/mo</span>
+                            </h1>
+                            <div class="clearfix">
+                                <ul>
+                                    <li><i class="fa fa-pie-chart"></i> 5 Gb Disk Space</li>
+                                    <li><i class="fa fa-paper-plane"></i> 1GB Dadicated Ram</li>
+                                </ul>
+                            </div>
+                            <a href="#">BUY</a>
+                        </div>
+                        <div class="single-pricing">
+                                <span>Premium</span>
+                                <h1>
+                                    <span>$</span>
+                                    99
+                                    <span>/mo</span>
+                                </h1>
+                                <div class="clearfix">
+                                    <ul>
+                                        <li><i class="fa fa-pie-chart"></i> 5 Gb Disk Space</li>
+                                        <li><i class="fa fa-paper-plane"></i> 1GB Dadicated Ram</li>
+                                    </ul>
+                                </div>
+                                <a href="#">BUY</a>
+                            </div>
                 </div>
             </div>
         </div>
@@ -190,7 +220,7 @@
                                 <div class="widget">
                                     <h3>Varios</h3>
                                     <ul>
-                                        <li><a href="#">Preguntas frecuentes</a></li>
+                                        <li><a href="faqs.html">Preguntas frecuentes</a></li>
                                         <li><a href="#">Aviso de privacidad</a></li>
                                         <li><a href="#">Términos y condiciones</a></li>
                                         <li><a href="#">Contáctanos</a></li>
@@ -222,7 +252,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        &copy; 2019 <a target="_blank" href="#" title="Matt´s Software">Matt´s Software</a>. Todos los derechos reservados.
+                        &copy; 2019 <a target="_self" href="index.html" title="Lion Software">Dentista Bucerias</a>. Todos los derechos reservados.
                     </div>
                     <div class="col-sm-6">
                         <ul class="pull-right">
