actualizacion al 31 de enero

--- a/services.html
+++ b/services.html
@@ -201,7 +201,7 @@
                     </div>
                     <div class="content">
                         <img src="images/review.png" alt="">
-                        <p>Excelente calidad en el servicio, me atendieron con prontitud. El consultorio es de primera</p>
+                        <p>Desde el momento en que entré al consultorio se siente un trato de primera con gran profesionalismo.</p>
                         <h4>- Cristina Aguilar</h4>
                     </div>
                 </div>
@@ -211,7 +211,7 @@
                     </div>
                     <div class="content">
                         <img src="images/review.png" alt="">
-                        <p>Excelente calidad en el servicio, me atendieron con prontitud. El consultorio es de primera</p>
+                        <p>Lo que me gustó de la Doctora Alba Nydia es que me explicó paso a paso en lo que consistiría mi tratamiento</p>
                         <h4>- Juan González</h4>
                     </div>
                 </div>
@@ -221,8 +221,8 @@
                     </div>
                     <div class="content">
                         <img src="images/review.png" alt="">
-                        <p>Excelente calidad en el servicio, me atendieron con prontitud. El consultorio es de primera</p>
-                        <h4>- Adolfo Aguilar</h4>
+                        <p>La atención que me otorgaron fue muy buena ya que la Doctora se toma el tiempo necesario para realizarme una limpieza dental.</p>
+                        <h4>- Raúl Guerrero</h4>
                     </div>
                 </div>
                 <div class="single-slide">
@@ -231,7 +231,7 @@
                     </div>
                     <div class="content">
                         <img src="images/review.png" alt="">
-                        <p>Excelente calidad en el servicio, me atendieron con prontitud. El consultorio es de primera</p>
+                        <p>Obtuve un gran beneficio en mi dentadura por el costo que invertí en ella.</p>
                         <h4>- Roberto Hernández</h4>
                     </div>
                 </div>
@@ -241,9 +241,9 @@
                     </div>
                     <div class="content">
                         <img src="images/review.png" alt="">
-                        <p>Excelente calidad en el servicio, me atendieron con prontitud. El consultorio es de primera</p>
+                        <p>Definitivamente recomiendo a la Doctora Alba, se ve que le interesa en mejorar las sonrisas de nosotros sus pacientes.</p>
                         <h4>- Fernando Pizarro</h4>
-                    </div>
+                    </div>   
                 </div>
             </div>
         </div>
